wip docs: improve documentation
