# src/infra/controllers/user-account.controller.ts
@@ -4,16 +4,26 @@ import { UserAccountService } from "../services/user-account.service";
 export class UserAccountController {
   constructor(private readonly userAccountService: UserAccountService) {
     this.find = this.find.bind(this);
+    this.findAll = this.findAll.bind(this);
     this.create = this.create.bind(this);
   }
 
   async find(req: Request, res: Response): Promise<Response> {
     try {
       const userAccount = await this.userAccountService.find(
-        req.params.id,
+        req.params.userId,
         req.userId
       );
       return res.status(200).json(userAccount);
+    } catch (error: any) {
+      return res.status(500).json({ error: error.message });
+    }
+  }
+
+  async findAll(req: Request, res: Response): Promise<Response> {
+    try {
+      const userAccounts = await this.userAccountService.findAll(req.userId);
+      return res.status(200).json(userAccounts);
     } catch (error: any) {
       return res.status(500).json({ error: error.message });
     }
@@ -24,6 +34,9 @@ export class UserAccountController {
       const userAccount = await this.userAccountService.create(req.body);
       return res.status(201).json(userAccount);
     } catch (error: any) {
+      if (error.message === "User not found") {
+        return res.status(404).json({ error: error.message });
+      }
       return res.status(500).json({ error: error.message });
     }
   }
